# nnet

./: Cargo.toml  LICENSE.md  Makefile  README.md
src/: main.rs
src/matrix/: mod.rs
src/nnet/: mod.rs
src/utils/: mod.rs
